Fix spacing issue between header and slider on home page in mobile view

--- a/cofowp/wp-content/themes/cofodev/assets/sass/site/_media-queries.scss
+++ b/cofowp/wp-content/themes/cofodev/assets/sass/site/_media-queries.scss
@@ -595,6 +595,7 @@
 	}
 
 	.home-slider {
+		margin-top: 24rem;
 		.slider-nav {
 			right: 2%;
 			top: 2%;
